Render result in gpu mode wrong, likely some gpu math implementation problem #33267

Closed
opened 2012-11-22 20:13:20 +01:00 by Eric Beier · 3 comments

%%%The attached file is an attempt to render IES profiles via an image texture. I posted the setup on Blenderartist (http://blenderartists.org/forum/showthread.php?264052) and several People told me it does not render correctly in GPU mode. I'm unfortunately not able to simplify the Node Setup and isolate the Problem because i don't own a CUDA capable card. My guess from the resulting Pattern (only a quarter of the Light rendered) is that there's some Problem with the Implementation of a math node.

Steps to replicate:

  • Open attached blend file
  • Unpack Textures
  • enable viewport rendering (there's no camera in the file, but there's no difference in f12 render)

I attached render results from cpu and gpu, as said above the gpu render only shows a quarter of the light pattern.%%%

%%%The attached file is an attempt to render IES profiles via an image texture. I posted the setup on Blenderartist (http://blenderartists.org/forum/showthread.php?264052) and several People told me it does not render correctly in GPU mode. I'm unfortunately not able to simplify the Node Setup and isolate the Problem because i don't own a CUDA capable card. My guess from the resulting Pattern (only a quarter of the Light rendered) is that there's some Problem with the Implementation of a math node. Steps to replicate: - Open attached blend file - Unpack Textures - enable viewport rendering (there's no camera in the file, but there's no difference in f12 render) I attached render results from cpu and gpu, as said above the gpu render only shows a quarter of the light pattern.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn revision 52519. Problem was the power math node, pow implementation of don't support the case pow(-1, 2), made that work manually now.%%%

%%%Fix in svn revision 52519. Problem was the power math node, pow implementation of don't support the case pow(-1, 2), made that work manually now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33267
No description provided.