Fix #33267: cycles math node power gave different results for CPU and GPU. The GPU variants do not support pow(-1, 2), it doesn't check for even exponents, do manually now.